--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-google-auth
-google-auth-oauthlib
 google-api-python-client
+google-auth-oauthlib
+google-auth-httplib2
 requests
+moviepy==1.0.3
+numpy<2.0.0
+instagrapi==1.17.0
